<resources>
    <string name="app_name">MK-DTN</string>
    <string name="action_settings">Settings</string>
    <string name="activate_dtn_btn_text">START</string>
    <string name="deactivate_dtn_btn_text">STOP</string>
    <string name="send_btn_text">SEND</string>
    <string name="pref_routing_protocol_key">dtn_routing_protocol</string>
    <string name="routing_protocol_title">DTN Routing Protocol</string>
    <string name="pref_default_routing_protocol">PROPHET</string>
    <string name="pref_priority_class_key">bundle_priority_class</string>
    <string name="priority_class_title">Bundle Priority Class</string>
    <string name="pref_default_priority_class">NORMAL</string>
    <string name="pref_lifetime_key">bundle_lifetime</string>
    <string name="lifetime_title">Bundle Lifetime</string>
    <string name="pref_default_lifetime">FIVE_HOURS</string>
    <string name="pref_default_transmission_mode">SOURCE</string>
    <string name="pref_transmission_mode_key">transmission_mode</string>
    <string name="pref_transmission_mode_title">Transmission Mode</string>
    <string name="pref_enable_manual_transmission_key">enable_manual_transmission</string>
    <string name="pref_enable_manual_transmission_title">Enable Manual Transmission</string>
    <string name="pref_default_max_fragment_payload_size">1_KIB</string>
    <string name="pref_max_fragment_payload_size_key">maximum_fragment_payload_size</string>
    <string name="pref_max_fragment_payload_size_title">Maximum Fragment Payload Size</string>
    <string name="pref_enable_manual_transmission_summary">
        Takes effect after (re)starting MK-DTN
    </string>
    <string name="mkdtn_channel_name">mkdtn_channel</string>
    <string name="mkdtn_channel_description">For DTN texting</string>
    <string name="delivery_report_text">&lt;b>%1$s&lt;/b> received your message</string>
    <string name="new_message_text">&lt;b>%1$s&lt;/b> %2$s</string>
    <string name="notification_group_key">mkdtn_group_key</string>
    <string name="mkdtn_hello_message">143f1b1</string>
    <string name="action_start_dtn">Start</string>
    <string name="action_stop_dtn">Stop</string>
    <string name="dtn_service_started">DTN Service ON</string>
    <string name="notification_bottom_summary_text">\@%1$s</string>
    <string name="public_notification_text">New message(s)</string>
    <string name="title_manager">Manager</string>
    <string name="title_activity_manager">Manager</string>
    <string name="sender_tv_label">Sender</string>
    <string name="message_tv_label">Message</string>
    <string name="received_at_tv_label">Received at</string>
    <string name="created_at_tv_label">Created at</string>
</resources>